Bug 437607 - plasma-systemmonitor crash in KSysGuard::CGroupDataModel::update
Summary: plasma-systemmonitor crash in KSysGuard::CGroupDataModel::update
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.21.5
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-24 14:09 UTC by Alex
Modified: 2021-05-25 17:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments
backtrace from drkonqi (4.31 KB, text/vnd.kde.kcrash-report)
2021-05-24 14:09 UTC, Alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2021-05-24 14:09:03 UTC
Created attachment 138741 [details]
backtrace from drkonqi

I thought this might have been 433013, but this crash occurred on plasma 5.21.5.

It seemed to happen when defocusing the window, but I haven't tried to reproduce it yet.
Comment 1 Bug Janitor Service 2021-05-25 09:10:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/163
Comment 2 Nate Graham 2021-05-25 17:38:39 UTC
Git commit 4eb79bb3b12bb55e8003cceff8d2187c4df3d4df by Nate Graham, on behalf of David Redondo.
Committed on 25/05/2021 at 17:38.
Pushed by ngraham into branch 'master'.

Do not crash when a filesystem error is encountered

directory_iterator(path&) will throw if an error happens. Avoid this
by using the error_code overload.

M  +6    -2    processcore/cgroup_data_model.cpp

https://invent.kde.org/plasma/libksysguard/commit/4eb79bb3b12bb55e8003cceff8d2187c4df3d4df
Comment 3 Nate Graham 2021-05-25 17:39:12 UTC
Git commit c855dab4cd9d8eb1ca7f6820143358b0c9d3302a by Nate Graham, on behalf of David Redondo.
Committed on 25/05/2021 at 17:39.
Pushed by ngraham into branch 'Plasma/5.22'.

Do not crash when a filesystem error is encountered

directory_iterator(path&) will throw if an error happens. Avoid this
by using the error_code overload.


(cherry picked from commit 4eb79bb3b12bb55e8003cceff8d2187c4df3d4df)

M  +6    -2    processcore/cgroup_data_model.cpp

https://invent.kde.org/plasma/libksysguard/commit/c855dab4cd9d8eb1ca7f6820143358b0c9d3302a