Do not crash when a filesystem error is encountered

directory_iterator(path&) will throw if an error happens. Avoid this
by using the error_code overload.
BUG:437607


(cherry picked from commit 4eb79bb3b12bb55e8003cceff8d2187c4df3d4df)